Add chatwebsocket + attribut point to student
